<resources>
    <string name="app_name">YouPHPTube</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pleasewait">Please Wait</string>
    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="title_activity_login">Configuration</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName (optional)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Save configuration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_server">Server Url. Use https://demo.youphptube.com</string>
    <string name="prompt_servererror">Connection to server cannot be established</string>
    <string name="defaulttime"> 0:00:00</string>
    <string name="videoname">VideoName</string>
    <string name="AutorName">AutorName</string>
    <string name="views">Views</string>
    <string name="title_activity_master">YouPHPTube</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="zero">0</string>
    <string name="share">Share</string>
    <string name="AddToPlaylist">Add to</string>
    <string name="PlayOnTv">Play On</string>
    <string name="AddedToLikeList">Video added to your like list</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="subscribers">Subscribers</string>
    <string name="channelname">Channel Name</string>


    <string-array name="VideoTypes">
        <item>HD</item>
        <item>SD</item>
        <item>LOW</item>
    </string-array>

    <string name="description">Description</string>
    <string name="title_activity_upn_psearch">Device search</string>

    <string name="no_devices_found">No devices found please wait</string>
    <string name="select_device">Select device</string>
</resources>
